remove chatlog. add local client changes. remove scrollbar. fix scroll to end. drop websocket server privileges

--- a/static/main.css
+++ b/static/main.css
@@ -11,4 +11,5 @@ html
     width:20rem;
     font-size:1rem;
     resize: none;
+    overflow: hidden;
 }
